bindings/c/whiteout_m2.h

typedef struct whiteout_M2PolytopeHalfEdge whiteout_M2PolytopeHalfEdge;
typedef struct whiteout_M2PolytopeShape whiteout_M2PolytopeShape;
typedef struct whiteout_M2PhysicsJoint whiteout_M2PhysicsJoint;
typedef struct whiteout_M2WeldJoint whiteout_M2WeldJoint;
typedef struct whiteout_M2SphericalJoint whiteout_M2SphericalJoint;
typedef struct whiteout_M2ShoulderJoint whiteout_M2ShoulderJoint;
typedef struct whiteout_M2PrismaticJoint whiteout_M2PrismaticJoint;
void whiteout_m2_M2PolytopeHalfEdge_delete(whiteout_M2PolytopeHalfEdge* self);
/* Signed step to the paired half-edge: the twin of edge `i` is `i + twinOffset`. Only +1 and -1 occur, in equal numbers. */
int8_t whiteout_m2_M2PolytopeHalfEdge_get_twinOffset(const whiteout_M2PolytopeHalfEdge* self);
void whiteout_m2_M2PolytopeHalfEdge_set_twinOffset(whiteout_M2PolytopeHalfEdge* self, int8_t value);
/* Where this half-edge starts, indexing PolytopeShape::vertices. */
uint8_t whiteout_m2_M2PolytopeHalfEdge_get_originVertex(const whiteout_M2PolytopeHalfEdge* self);
void whiteout_m2_M2PolytopeHalfEdge_set_originVertex(whiteout_M2PolytopeHalfEdge* self, uint8_t value);
/* The face this half-edge bounds, indexing PolytopeShape::facePlanes. */
uint8_t whiteout_m2_M2PolytopeHalfEdge_get_faceIndex(const whiteout_M2PolytopeHalfEdge* self);
void whiteout_m2_M2PolytopeHalfEdge_set_faceIndex(whiteout_M2PolytopeHalfEdge* self, uint8_t value);
/* Next half-edge around @ref faceIndex. */
uint8_t whiteout_m2_M2PolytopeHalfEdge_get_nextEdge(const whiteout_M2PolytopeHalfEdge* self);
void whiteout_m2_M2PolytopeHalfEdge_set_nextEdge(whiteout_M2PolytopeHalfEdge* self, uint8_t value);
/* ── M2PolytopeShape ─────────────────────────────────────────────── */

/* PLYT — a convex hull, version 3+. Domino's `dmPolytope`. */
/*  */
/* The chunk stores fixed-size headers and variable-size payloads in two blocks; both halves are folded into this one struct, and the header's counts are recomputed from the vectors on write. The header's four pointer fields are filled in by the client at load time and are zero in every file, so they are not kept. */
whiteout_M2PolytopeShape* whiteout_m2_M2PolytopeShape_new(void);
void whiteout_m2_M2PolytopeShape_delete(whiteout_M2PolytopeShape* self);
/* Hull corners. */
size_t whiteout_m2_M2PolytopeShape_get_vertices_count(const whiteout_M2PolytopeShape* self);
const float* whiteout_m2_M2PolytopeShape_get_vertices_data(const whiteout_M2PolytopeShape* self);
/* Outward plane of each face, `xyz` normal and `w` offset. */
size_t whiteout_m2_M2PolytopeShape_get_facePlanes_count(const whiteout_M2PolytopeShape* self);
const float* whiteout_m2_M2PolytopeShape_get_facePlanes_data(const whiteout_M2PolytopeShape* self);
size_t whiteout_m2_M2PolytopeShape_get_edges_count(const whiteout_M2PolytopeShape* self);
whiteout_M2PolytopeHalfEdge* whiteout_m2_M2PolytopeShape_get_edges_at(whiteout_M2PolytopeShape* self, size_t index);
/* Volume-weighted, not the vertex average. */
whiteout_Vector3f* whiteout_m2_M2PolytopeShape_get_centroid(whiteout_M2PolytopeShape* self);
void whiteout_m2_M2PolytopeShape_set_centroid(whiteout_M2PolytopeShape* self, const whiteout_Vector3f* value);
/* Hull volume. */
float whiteout_m2_M2PolytopeShape_get_volume(const whiteout_M2PolytopeShape* self);
void whiteout_m2_M2PolytopeShape_set_volume(whiteout_M2PolytopeShape* self, float value);
/* Hull surface area. */
float whiteout_m2_M2PolytopeShape_get_surfaceArea(const whiteout_M2PolytopeShape* self);
void whiteout_m2_M2PolytopeShape_set_surfaceArea(whiteout_M2PolytopeShape* self, float value);
/* The four-byte gaps each count leaves in front of its 64-bit pointer, and the one that trails the header. Uninitialised in the files — some carry fragments of unrelated strings — so they are kept verbatim for writing. */
uint32_t whiteout_m2_M2PolytopeShape_get_padding04(const whiteout_M2PolytopeShape* self);
void whiteout_m2_M2PolytopeShape_set_padding04(whiteout_M2PolytopeShape* self, uint32_t value);
uint32_t whiteout_m2_M2PolytopeShape_get_padding14(const whiteout_M2PolytopeShape* self);
void whiteout_m2_M2PolytopeShape_set_padding14(whiteout_M2PolytopeShape* self, uint32_t value);
uint32_t whiteout_m2_M2PolytopeShape_get_padding2c(const whiteout_M2PolytopeShape* self);
void whiteout_m2_M2PolytopeShape_set_padding2c(whiteout_M2PolytopeShape* self, uint32_t value);
uint32_t whiteout_m2_M2PolytopeShape_get_padding4c(const whiteout_M2PolytopeShape* self);
void whiteout_m2_M2PolytopeShape_set_padding4c(whiteout_M2PolytopeShape* self, uint32_t value);
/* ── M2PhysicsJoint ─────────────────────────────────────────────── */

/* JOIN — connects two bodies with the joint named by @ref jointType. */
whiteout_M2PhysicsJoint* whiteout_m2_M2PhysicsJoint_new(void);
void whiteout_m2_M2PhysicsJoint_delete(whiteout_M2PhysicsJoint* self);
uint32_t whiteout_m2_M2PhysicsJoint_get_bodyAIndex(const whiteout_M2PhysicsJoint* self);
void whiteout_m2_M2PhysicsJoint_set_bodyAIndex(whiteout_M2PhysicsJoint* self, uint32_t value);
uint32_t whiteout_m2_M2PhysicsJoint_get_bodyBIndex(const whiteout_M2PhysicsJoint* self);
void whiteout_m2_M2PhysicsJoint_set_bodyBIndex(whiteout_M2PhysicsJoint* self, uint32_t value);
/* Zero in every corpus joint. */
uint32_t whiteout_m2_M2PhysicsJoint_get_padding08(const whiteout_M2PhysicsJoint* self);
void whiteout_m2_M2PhysicsJoint_set_padding08(whiteout_M2PhysicsJoint* self, uint32_t value);
int32_t whiteout_m2_M2PhysicsJoint_get_jointType(const whiteout_M2PhysicsJoint* self);
void whiteout_m2_M2PhysicsJoint_set_jointType(whiteout_M2PhysicsJoint* self, int32_t value);
/* Entry index within the joint array @ref jointType selects. */
int16_t whiteout_m2_M2PhysicsJoint_get_jointId(const whiteout_M2PhysicsJoint* self);
void whiteout_m2_M2PhysicsJoint_set_jointId(whiteout_M2PhysicsJoint* self, int16_t value);
/* ── M2WeldJoint ─────────────────────────────────────────────── */

/* WELJ/WLJ2/WLJ3 — a soft rigid connection. Zero frequency means the axis is solved as a hard constraint. */
whiteout_M2WeldJoint* whiteout_m2_M2WeldJoint_new(void);
void whiteout_m2_M2WeldJoint_delete(whiteout_M2WeldJoint* self);
float whiteout_m2_M2WeldJoint_get_angularFrequencyHz(const whiteout_M2WeldJoint* self);
void whiteout_m2_M2WeldJoint_set_angularFrequencyHz(whiteout_M2WeldJoint* self, float value);
float whiteout_m2_M2WeldJoint_get_angularDampingRatio(const whiteout_M2WeldJoint* self);
void whiteout_m2_M2WeldJoint_set_angularDampingRatio(whiteout_M2WeldJoint* self, float value);
/* WLJ2+ */
float whiteout_m2_M2WeldJoint_get_linearFrequencyHz(const whiteout_M2WeldJoint* self);
void whiteout_m2_M2WeldJoint_set_linearFrequencyHz(whiteout_M2WeldJoint* self, float value);
/* WLJ2+ */
float whiteout_m2_M2WeldJoint_get_linearDampingRatio(const whiteout_M2WeldJoint* self);
void whiteout_m2_M2WeldJoint_set_linearDampingRatio(whiteout_M2WeldJoint* self, float value);
/* WLJ3+. Zero in 265 of 274 weld joints. */
float whiteout_m2_M2WeldJoint_get_unknown70(const whiteout_M2WeldJoint* self);
void whiteout_m2_M2WeldJoint_set_unknown70(whiteout_M2WeldJoint* self, float value);
/* ── M2SphericalJoint ─────────────────────────────────────────────── */

/* SPHJ — a ball joint between two anchor points. */
whiteout_M2SphericalJoint* whiteout_m2_M2SphericalJoint_new(void);
void whiteout_m2_M2SphericalJoint_delete(whiteout_M2SphericalJoint* self);
whiteout_Vector3f* whiteout_m2_M2SphericalJoint_get_anchorA(whiteout_M2SphericalJoint* self);
void whiteout_m2_M2SphericalJoint_set_anchorA(whiteout_M2SphericalJoint* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2SphericalJoint_get_anchorB(whiteout_M2SphericalJoint* self);
void whiteout_m2_M2SphericalJoint_set_anchorB(whiteout_M2SphericalJoint* self, const whiteout_Vector3f* value);
float whiteout_m2_M2SphericalJoint_get_frictionTorque(const whiteout_M2SphericalJoint* self);
void whiteout_m2_M2SphericalJoint_set_frictionTorque(whiteout_M2SphericalJoint* self, float value);
/* ── M2ShoulderJoint ─────────────────────────────────────────────── */

/* SHOJ/SHJ2 — a twist-and-cone joint, the one that chains cloth. */
whiteout_M2ShoulderJoint* whiteout_m2_M2ShoulderJoint_new(void);
void whiteout_m2_M2ShoulderJoint_delete(whiteout_M2ShoulderJoint* self);
float whiteout_m2_M2ShoulderJoint_get_lowerTwistAngle(const whiteout_M2ShoulderJoint* self);
void whiteout_m2_M2ShoulderJoint_set_lowerTwistAngle(whiteout_M2ShoulderJoint* self, float value);
float whiteout_m2_M2ShoulderJoint_get_upperTwistAngle(const whiteout_M2ShoulderJoint* self);
void whiteout_m2_M2ShoulderJoint_set_upperTwistAngle(whiteout_M2ShoulderJoint* self, float value);
/* Degrees: the corpus holds 20, 35, 45 and 60, while `dmShoulderJoint` clamps its own cone to [10°, 170°] expressed in radians — so the loader converts on the way in. */
float whiteout_m2_M2ShoulderJoint_get_coneAngle(const whiteout_M2ShoulderJoint* self);
void whiteout_m2_M2ShoulderJoint_set_coneAngle(whiteout_M2ShoulderJoint* self, float value);
/* version 2+ */
float whiteout_m2_M2ShoulderJoint_get_maxMotorTorque(const whiteout_M2ShoulderJoint* self);
void whiteout_m2_M2ShoulderJoint_set_maxMotorTorque(whiteout_M2ShoulderJoint* self, float value);
/* version 2+ */
uint32_t whiteout_m2_M2ShoulderJoint_get_motorMode(const whiteout_M2ShoulderJoint* self);
void whiteout_m2_M2ShoulderJoint_set_motorMode(whiteout_M2ShoulderJoint* self, uint32_t value);
/* SHJ2 */
float whiteout_m2_M2ShoulderJoint_get_motorFrequencyHz(const whiteout_M2ShoulderJoint* self);
void whiteout_m2_M2ShoulderJoint_set_motorFrequencyHz(whiteout_M2ShoulderJoint* self, float value);
/* SHJ2 */
float whiteout_m2_M2ShoulderJoint_get_motorDampingRatio(const whiteout_M2ShoulderJoint* self);
void whiteout_m2_M2ShoulderJoint_set_motorDampingRatio(whiteout_M2ShoulderJoint* self, float value);
/* ── M2PrismaticJoint ─────────────────────────────────────────────── */

/* PRSJ/PRS2 — a sliding joint, version 2+. */
whiteout_M2PrismaticJoint* whiteout_m2_M2PrismaticJoint_new(void);
void whiteout_m2_M2PrismaticJoint_delete(whiteout_M2PrismaticJoint* self);
float whiteout_m2_M2PrismaticJoint_get_lowerLimit(const whiteout_M2PrismaticJoint* self);
void whiteout_m2_M2PrismaticJoint_set_lowerLimit(whiteout_M2PrismaticJoint* self, float value);
float whiteout_m2_M2PrismaticJoint_get_upperLimit(const whiteout_M2PrismaticJoint* self);
void whiteout_m2_M2PrismaticJoint_set_upperLimit(whiteout_M2PrismaticJoint* self, float value);
/* Unidentified; zero in all twelve corpus prismatic joints. Domino's prismatic def carries an enable-limit flag next to the limit pair. */
float whiteout_m2_M2PrismaticJoint_get_unknown68(const whiteout_M2PrismaticJoint* self);
void whiteout_m2_M2PrismaticJoint_set_unknown68(whiteout_M2PrismaticJoint* self, float value);