bindings/csharp/Whiteout/M2/NativeMethods.M2.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeHalfEdge_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial sbyte whiteout_m2_M2PolytopeHalfEdge_get_twinOffset(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeHalfEdge_set_twinOffset(IntPtr self, sbyte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m2_M2PolytopeHalfEdge_get_originVertex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeHalfEdge_set_originVertex(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m2_M2PolytopeHalfEdge_get_faceIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeHalfEdge_set_faceIndex(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m2_M2PolytopeHalfEdge_get_nextEdge(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeHalfEdge_set_nextEdge(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PolytopeShape_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeShape_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PolytopeShape_get_vertices_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PolytopeShape_get_vertices_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PolytopeShape_get_facePlanes_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PolytopeShape_get_facePlanes_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PolytopeShape_get_edges_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PolytopeShape_get_edges_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PolytopeShape_get_centroid(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeShape_set_centroid(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PolytopeShape_get_volume(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeShape_set_volume(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PolytopeShape_get_surfaceArea(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeShape_set_surfaceArea(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2PolytopeShape_get_padding04(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeShape_set_padding04(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2PolytopeShape_get_padding14(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeShape_set_padding14(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2PolytopeShape_get_padding2c(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeShape_set_padding2c(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2PolytopeShape_get_padding4c(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PolytopeShape_set_padding4c(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsJoint_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsJoint_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2PhysicsJoint_get_bodyAIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsJoint_set_bodyAIndex(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2PhysicsJoint_get_bodyBIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsJoint_set_bodyBIndex(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2PhysicsJoint_get_padding08(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsJoint_set_padding08(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2PhysicsJoint_get_jointType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsJoint_set_jointType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial short whiteout_m2_M2PhysicsJoint_get_jointId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsJoint_set_jointId(IntPtr self, short value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2WeldJoint_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WeldJoint_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WeldJoint_get_angularFrequencyHz(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WeldJoint_set_angularFrequencyHz(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WeldJoint_get_angularDampingRatio(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WeldJoint_set_angularDampingRatio(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WeldJoint_get_linearFrequencyHz(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WeldJoint_set_linearFrequencyHz(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WeldJoint_get_linearDampingRatio(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WeldJoint_set_linearDampingRatio(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WeldJoint_get_unknown70(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WeldJoint_set_unknown70(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SphericalJoint_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SphericalJoint_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SphericalJoint_get_anchorA(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SphericalJoint_set_anchorA(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SphericalJoint_get_anchorB(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SphericalJoint_set_anchorB(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2SphericalJoint_get_frictionTorque(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SphericalJoint_set_frictionTorque(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ShoulderJoint_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShoulderJoint_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ShoulderJoint_get_lowerTwistAngle(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShoulderJoint_set_lowerTwistAngle(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ShoulderJoint_get_upperTwistAngle(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShoulderJoint_set_upperTwistAngle(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ShoulderJoint_get_coneAngle(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShoulderJoint_set_coneAngle(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ShoulderJoint_get_maxMotorTorque(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShoulderJoint_set_maxMotorTorque(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2ShoulderJoint_get_motorMode(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShoulderJoint_set_motorMode(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ShoulderJoint_get_motorFrequencyHz(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShoulderJoint_set_motorFrequencyHz(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ShoulderJoint_get_motorDampingRatio(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShoulderJoint_set_motorDampingRatio(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PrismaticJoint_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PrismaticJoint_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PrismaticJoint_get_lowerLimit(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PrismaticJoint_set_lowerLimit(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PrismaticJoint_get_upperLimit(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PrismaticJoint_set_upperLimit(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PrismaticJoint_get_unknown68(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PrismaticJoint_set_unknown68(IntPtr self, float value);

